@@ -59,6 +59,7 @@ issues:
     - 'Magic number: 0644\D '
     - 'Magic number: 0755\D '
     - 'Magic number: 0664\D '
+    - 'Magic number: 65536\D '
     - 'Top level comment should end in a period'
     - 'package should be `modgearman_test` instead of `modgearman`'
     - 'Expect WriteFile permissions to be 0600 or less'
