@@ -2,6 +2,7 @@ This file documents the revision history for the Mod-Gearman-Worker-Go
 
 next:
           - improve restarting epn server
+          - fix reading large epn server plugin output
 
 1.3.1    Wed Feb 15 12:09:33 CET 2023
           - fix epn file detection
